WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 113560
Text representation of pseudo elements, '::-webkit-distributed', is wrong in CSSSelector::selectorText().
https://bugs.webkit.org/show_bug.cgi?id=113560
Summary
Text representation of pseudo elements, '::-webkit-distributed', is wrong in ...
Hayato Ito
Reported
2013-03-29 00:01:33 PDT
The result of CSSSelector::selectorText() for '::-webkit-distributed(...)' is wrong. e.g. Given a rule of: 'content::-webkit-distributed(div div:first-child)' CSSSelector::selectorText() returns the following: 'content::-webkit-distributed(div) div:first-child'
Attachments
Fix.
(3.62 KB, patch)
2013-03-29 03:27 PDT
,
Hayato Ito
no flags
Details
Formatted Diff
Diff
Add a layouttest
(5.96 KB, patch)
2013-03-31 18:17 PDT
,
Hayato Ito
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Hayato Ito
Comment 1
2013-03-29 03:27:22 PDT
Created
attachment 195716
[details]
Fix.
Dimitri Glazkov (Google)
Comment 2
2013-03-29 07:53:07 PDT
Comment on
attachment 195716
[details]
Fix. View in context:
https://bugs.webkit.org/attachment.cgi?id=195716&action=review
> Source/WebCore/ChangeLog:10 > + No new tests, no behavior change for layout tests.
Are you sure? It seems that you could get at it with CSSStyleRule.selectorText.
Hayato Ito
Comment 3
2013-03-31 17:25:27 PDT
(In reply to
comment #2
)
> (From update of
attachment 195716
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=195716&action=review
> > > Source/WebCore/ChangeLog:10 > > + No new tests, no behavior change for layout tests. > > Are you sure? It seems that you could get at it with CSSStyleRule.selectorText.
It seems we can write a test. Let me add a test.
Hayato Ito
Comment 4
2013-03-31 18:17:35 PDT
Created
attachment 195914
[details]
Add a layouttest
WebKit Review Bot
Comment 5
2013-03-31 20:42:58 PDT
Comment on
attachment 195914
[details]
Add a layouttest Clearing flags on attachment: 195914 Committed
r147295
: <
http://trac.webkit.org/changeset/147295
>
WebKit Review Bot
Comment 6
2013-03-31 20:43:01 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug