Text representation of pseudo elements, '::-webkit-distributed', is wrong in CSSSelector::selectorText(). https://bugs.webkit.org/show_bug.cgi?id=113560

Reviewed by Dimitri Glazkov.

Source/WebCore:

Fix the text representation of distributed functional pseudo elements in CSSSelector::selectorText().

Test: fast/dom/shadow/distributed-pseudo-element-css-text.html

* css/CSSSelector.cpp:
(WebCore::CSSSelector::selectorText):
* css/CSSSelector.h:
(CSSSelector):

LayoutTests:

* fast/dom/shadow/distributed-pseudo-element-css-text-expected.txt: Added.
* fast/dom/shadow/distributed-pseudo-element-css-text.html: Added.


Canonical link: https://commits.webkit.org/131990@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147295 268f45cc-cd09-0410-ab3c-d52691b4dbfc